test/retTypeCrash1.slq
// args: --run

def crash()qfree:!â„•{ assert(false); } // error
def f(): ğ”¹^(1+crash() sub crash())â‡’(1:B,);
def call[n: !â„•](f: ğŸ™ !â†’ ğ”¹^n):ğ”¹^nâ‡’f();
def main() â‡’ call(f);
//f()~call[1](f);
